--- a/game/index.html
+++ b/game/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Nome do jogo</title>
+    <title>Type War</title>
   </head>
   <body class="w-full h-full overflow-auto">
     <div id="root"></div>
