using springs lib

--- a/game/index.html
+++ b/game/index.html
@@ -19,7 +19,7 @@
     />
     <title>Type War</title>
   </head>
-  <body class="w-full h-full overflow-auto">
+  <body class="w-full h-full overflow-hidden">
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/src/main.tsx"></script>
