--- a/game/index.html
+++ b/game/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="w-full h-full overflow-hidden">
+<html lang="pt-BR" class="w-full h-full overflow-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="cache-control" content="no-cache" />
